<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.japanglify.app.ui.TryItCardPreference
        app:key="try_it_card"
        app:selectable="false" />

    <PreferenceCategory app:title="@string/pref_category_selection_chip">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="clipboard_assist"
            app:summary="@string/pref_clipboard_assist_summary"
            app:title="@string/pref_clipboard_assist" />
        <Preference
            app:key="open_accessibility"
            app:summary="@string/pref_open_accessibility_summary"
            app:title="@string/pref_open_accessibility" />
        <Preference
            app:key="a11y_status"
            app:selectable="false"
            app:summary="@string/a11y_status_unknown"
            app:title="@string/pref_a11y_status" />
        <SwitchPreferenceCompat
            android:layout="@layout/preference_indented"
            app:defaultValue="true"
            app:dependency="clipboard_assist"
            app:key="selection_overlay"
            app:summary="@string/pref_selection_overlay_summary"
            app:title="@string/pref_selection_overlay" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_share_targets">
        <Preference
            app:key="save_share_target"
            app:summary="@string/pref_save_share_target_summary"
            app:title="@string/pref_save_share_target" />
        <Preference
            app:key="manage_share_targets"
            app:summary="@string/pref_manage_share_targets_summary"
            app:title="@string/pref_manage_share_targets" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_scripts">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="include_furigana"
            app:summary="@string/pref_include_furigana_summary"
            app:title="@string/pref_include_furigana" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="include_romaji"
            app:summary="@string/pref_include_romaji_summary"
            app:title="@string/pref_include_romaji" />
        <SwitchPreferenceCompat
            android:layout="@layout/preference_indented"
            app:defaultValue="true"
            app:dependency="include_furigana"
            app:key="furigana_kanji_only"
            app:summary="@string/pref_furigana_kanji_only_summary"
            app:title="@string/pref_furigana_kanji_only" />
        <SwitchPreferenceCompat
            android:layout="@layout/preference_indented"
            app:defaultValue="false"
            app:dependency="include_romaji"
            app:key="capitalize_romaji"
            app:summary="@string/pref_capitalize_romaji_summary"
            app:title="@string/pref_capitalize_romaji" />
        <ListPreference
            android:layout="@layout/preference_indented"
            app:defaultValue="none"
            app:dependency="include_furigana"
            app:key="furigana_punctuation_style"
            app:title="@string/pref_furigana_punctuation_style"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:layout="@layout/preference_indented"
            app:defaultValue="ditto"
            app:dependency="include_romaji"
            app:key="line_elision_marker"
            app:title="@string/pref_line_elision_marker"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            app:dependency="include_romaji"
            app:key="custom_line_elision_marker"
            app:summary="@string/pref_custom_line_elision_marker_summary"
            app:title="@string/pref_custom_line_elision_marker" />
        <ListPreference
            android:layout="@layout/preference_indented"
            app:defaultValue="dot"
            app:dependency="include_romaji"
            app:key="mora_seam_style"
            app:title="@string/pref_mora_seam_style"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_phonetics">
        <ListPreference
            app:defaultValue="hepburn_modified"
            app:key="romanization_system"
            app:title="@string/pref_romanization"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="below"
            app:key="romaji_position"
            app:title="@string/pref_romaji_position"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_rendering">
        <ListPreference
            app:defaultValue="interlinear"
            app:key="output_format"
            app:title="@string/pref_output_format"
            app:useSimpleSummaryProvider="true" />
        <com.japanglify.app.ui.OutputFormatPreviewPreference
            app:key="output_format_preview"
            app:selectable="false" />
        <com.japanglify.app.ui.MaxLineWidthPreference
            app:defaultValue="14"
            app:key="max_line_width_fullwidth"
            app:title="@string/pref_max_line_width"
            app:summary="@string/pref_max_line_width_summary" />
        <ListPreference
            app:defaultValue="horizontal"
            app:key="writing_orientation"
            app:summary="@string/pref_writing_orientation_summary"
            app:title="@string/pref_writing_orientation" />
        <ListPreference
            app:defaultValue="standard"
            app:key="image_color_scheme"
            app:summary="@string/pref_image_color_scheme_summary"
            app:title="@string/pref_image_color_scheme"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="preemptive_image_render"
            app:summary="@string/pref_preemptive_image_render_summary"
            app:title="@string/pref_preemptive_image_render" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="textNoSuggestions"
            app:defaultValue="#FFFFFF"
            app:key="custom_image_bg_color"
            app:summary="@string/pref_custom_image_color_summary"
            app:title="@string/pref_custom_image_bg_color" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="textNoSuggestions"
            app:defaultValue="#000000"
            app:key="custom_image_base_color"
            app:title="@string/pref_custom_image_base_color"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="textNoSuggestions"
            app:defaultValue="#555555"
            app:key="custom_image_furigana_color"
            app:title="@string/pref_custom_image_furigana_color"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="textNoSuggestions"
            app:defaultValue="#555555"
            app:key="custom_image_romaji_color"
            app:title="@string/pref_custom_image_romaji_color"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="textNoSuggestions"
            app:defaultValue="#1E6B34"
            app:key="custom_image_gloss_color"
            app:title="@string/pref_custom_image_gloss_color"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_dictionary">
        <ListPreference
            app:defaultValue="jmdict_en"
            app:key="dictionary_source"
            app:title="@string/pref_dictionary_source"
            app:useSimpleSummaryProvider="true" />
        <com.japanglify.app.ui.DictionaryStatusPreference
            app:key="dictionary_status"
            app:selectable="false" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="include_glosses"
            app:summary="@string/pref_include_glosses_summary"
            app:title="@string/pref_include_glosses" />
        <ListPreference
            app:defaultValue="modern"
            app:dependency="include_glosses"
            app:key="sense_selection_preset"
            app:summary="@string/pref_sense_selection_preset_summary"
            app:title="@string/pref_sense_selection_preset" />
        <EditTextPreference
            android:inputType="number"
            app:defaultValue="12"
            app:dependency="include_glosses"
            app:key="max_gloss_length"
            app:summary="@string/pref_max_gloss_length_summary"
            app:title="@string/pref_max_gloss_length"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="numberDecimal|numberSigned"
            app:dependency="include_glosses"
            app:key="custom_sense_richness_weight"
            app:title="@string/pref_custom_sense_richness_weight"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="numberDecimal|numberSigned"
            app:dependency="include_glosses"
            app:key="custom_sense_position_weight"
            app:title="@string/pref_custom_sense_position_weight"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/preference_indented"
            android:inputType="numberDecimal|numberSigned"
            app:dependency="include_glosses"
            app:key="custom_sense_dated_weight"
            app:title="@string/pref_custom_sense_dated_weight"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_emoji">
        <com.japanglify.app.ui.DictionaryStatusPreference
            app:key="emoji_status"
            app:selectable="false" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="include_emoji"
            app:summary="@string/pref_include_emoji_summary"
            app:title="@string/pref_include_emoji" />
        <ListPreference
            android:layout="@layout/preference_indented"
            app:defaultValue="strict"
            app:dependency="include_emoji"
            app:key="emoji_precision_tier"
            app:title="@string/pref_emoji_precision_tier"
            app:useSimpleSummaryProvider="true" />
        <com.japanglify.app.ui.DictionaryStatusPreference
            app:dependency="include_emoji"
            app:key="wordnet_status"
            app:selectable="false" />
        <SwitchPreferenceCompat
            android:layout="@layout/preference_indented"
            app:defaultValue="false"
            app:dependency="include_emoji"
            app:key="emoji_always_show_both"
            app:summary="@string/pref_emoji_always_show_both_summary"
            app:title="@string/pref_emoji_always_show_both" />
        <MultiSelectListPreference
            android:layout="@layout/preference_indented"
            app:dependency="include_emoji"
            app:key="emoji_pos_scope"
            app:summary="@string/pref_emoji_pos_scope_summary"
            app:title="@string/pref_emoji_pos_scope" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_clipboard">
        <SwitchPreferenceCompat
            android:layout="@layout/preference_indented"
            app:defaultValue="false"
            app:dependency="clipboard_assist"
            app:key="clipboard_fgs_fallback"
            app:summary="@string/pref_clipboard_fgs_summary"
            app:title="@string/pref_clipboard_fgs" />
        <SwitchPreferenceCompat
            android:layout="@layout/preference_indented"
            app:defaultValue="true"
            app:dependency="clipboard_assist"
            app:key="cut_replace"
            app:summary="@string/pref_cut_replace_summary"
            app:title="@string/pref_cut_replace" />
        <Preference
            app:key="reset_services"
            app:title="@string/pref_reset_services"
            app:summary="@string/pref_reset_services_summary" />
    </PreferenceCategory>

    <com.japanglify.app.ui.StatusCardPreference
        app:key="status_card"
        app:selectable="false" />

    <PreferenceCategory app:title="@string/pref_category_help">
        <Preference
            app:key="process_text_help"
            app:selectable="false"
            app:summary="@string/pref_process_text_help_summary"
            app:title="@string/pref_process_text_help" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_about">
        <Preference
            app:key="about"
            app:selectable="false"
            app:summary="@string/pref_about_summary"
            app:title="@string/app_name" />
        <Preference
            app:key="about_team"
            app:selectable="false"
            app:summary="@string/pref_about_team_summary"
            app:title="@string/pref_about_team" />
        <Preference
            app:key="about_contact"
            app:summary="@string/pref_about_contact_summary"
            app:title="@string/pref_about_contact" />
        <Preference
            app:key="about_profile"
            app:summary="@string/pref_about_profile_summary"
            app:title="@string/pref_about_profile" />
        <Preference
            app:key="about_credits"
            app:selectable="false"
            app:summary="@string/pref_about_credits_summary"
            app:title="@string/pref_about_credits" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_support">
        <Preference
            app:key="donate"
            app:summary="@string/pref_donate_summary"
            app:title="@string/pref_donate_title" />
        <Preference
            app:key="license_link"
            app:summary="@string/pref_license_summary"
            app:title="@string/pref_license_title" />
    </PreferenceCategory>
</PreferenceScreen>
